# string_mult

./: Cargo.toml  Makefile.mak  README.md
src/: gramm.pest  lib.rs  main.rs
src/modules/: evaluating.rs  mod.rs  parsing.rs
tests/: evaluation.rs  grammar.rs  parser.rs  parsing.rs
