[package]
name = "string_mult"
description = "String multiplication commands parser and evaluator"
version = "0.2.1"
edition = "2021"
authors = ["Artemii Kolomiichuk <artemii.kolomiichuk@ukma.edu.ua>"]
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0.92"
pest = "2.7.14"
pest_derive = "2.7.14"
thiserror = "1.0.67"
